# GPUC-SPH

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Proposal.txt  README.md  Roadmap.txt  compile_shader.cmake
include/: camera.h  colormaps.h  debug.h  debug_image.h  hashgrid.h  helper.h  imgui_ui.h  initialization.h  parameters.h  particle_physics.h  particle_renderer.h  particle_simulation.h  project.h  render.h  renderdoc.h  renderer.h  simulation.h  simulation_parameters.h  simulation_state.h  spatial_lookup.h  sph_render.h  sph_scene_parameters.h  sph_simulation_state.h  task_common.h  utils.h
libs/: CMakeLists.txt
scenes/: default.yaml  example_2d.yaml  example_3d.yaml  performance_3d.yaml
scenes_benchmark/: 3d_128k_8x8x8.yaml  3d_128k_8x8x8_naive.yaml  3d_16k_8x8x8.yaml  3d_16k_8x8x8_naive.yaml  3d_256k_8x8x8.yaml  3d_32k_8x8x8.yaml  3d_32k_8x8x8_naive.yaml  3d_512k_8x8x8.yaml  3d_64k_16x8x8.yaml  3d_64k_4x4x4.yaml  3d_64k_8x4x4.yaml  3d_64k_8x8x4.yaml  3d_64k_8x8x8.yaml  3d_64k_8x8x8_naive.yaml  3d_8k_8x8x8.yaml  3d_8k_8x8x8_naive.yaml
shaders/: _defines.glsl  background2d.frag  background2d.vert  background_environment.frag  background_quad.vert  chessboard.frag  density.glsl  density_grid.comp  density_grid_naive.comp  density_update.comp  lines.vert  particle.vert  particle2d.frag  particle2d.geom  particle2d.vert  particle3d.vert  particle_simulation.comp  particles.comp  phong.frag  position_update.comp  ray_marcher.frag  ray_marcher_water.frag  simulation_cube.vert  soup.vert  spatial_lookup.glsl  spatial_lookup.index.comp  spatial_lookup.sort.bitonic.comp  spatial_lookup.sort.bitonic.local.comp  spatial_lookup.sort.bubble.comp  spatial_lookup.sort.comp  spatial_lookup.traversal.glsl  spatial_lookup.write.comp  white.frag
src/: camera.cpp  colormaps.cpp  debug.cpp  debug_image.cpp  hashgrid.cpp  imgui_ui.cpp  initialization.cpp  main.cpp  parameters.cpp  particle_physics.cpp  particle_renderer.cpp  particle_simulation.cpp  particles.cpp  project.cpp  render.cpp  renderdoc.cpp  renderer.cpp  simulation.cpp  simulation_state.cpp  spatial_lookup.cpp  sph_render.cpp  sph_scene_parameters.cpp  sph_simulation_state.cpp  task_common.cpp  utils.cpp
